--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple sync of local and remote folders using rsync",
   "repository": {
     "type": "git",
-    "url": "https://github.com/npm/npm.git"
+    "url": "https://github.com/PalleZingmark/node-folder-rsync"
   },
   "author": {
     "name": "Palle Zingmark",
